// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordInput /> when visibility is not toggled renders correctly 1`] = `
.emotion-3 {
  padding-right: 5.625rem;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color 200ms ease-in;
  transition: border-color 200ms ease-in;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-3:focus {
  border-color: #8DE2E0;
}

.emotion-3:disabled {
  opacity: 0.7;
  cursor: not-allowed;
}

.emotion-3::-webkit-input-placeholder {
  color: #666666;
}

.emotion-3::-moz-placeholder {
  color: #666666;
}

.emotion-3:-ms-input-placeholder {
  color: #666666;
}

.emotion-3::placeholder {
  color: #666666;
}

.emotion-3::-ms-clear {
  display: none;
}

.emotion-14 {
  position: relative;
}

.emotion-1 {
  margin-bottom: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 32px;
  padding-right: 32px;
  color: greys.charcoal;
  background-color: white;
  font-size: base;
  line-height: normal;
  border: 2px;
  border-color: greys.alto;
  text-align: left;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color;
  transition: border-color;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-right: 5.625rem;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color 200ms ease-in;
  transition: border-color 200ms ease-in;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1:focus {
  border-color: #8DE2E0;
}

.emotion-1:disabled {
  opacity: 0.7;
  cursor: not-allowed;
}

.emotion-1::-webkit-input-placeholder {
  color: #666666;
}

.emotion-1::-moz-placeholder {
  color: #666666;
}

.emotion-1:-ms-input-placeholder {
  color: #666666;
}

.emotion-1::placeholder {
  color: #666666;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-12 {
  border: none;
  margin: 0;
  padding: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  line-height: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  position: absolute;
  height: 100%;
  top: 0;
  left: calc(100% - 5rem);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-12:focus {
  outline: none;
}

.emotion-8 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
}

.emotion-6 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
}

<PasswordInput
  pr="5.625rem"
>
  <Base
    className="emotion-3 emotion-0"
  >
    <Wrapper>
      <div
        className="emotion-14 emotion-15"
      >
        <PasswordInput__Input
          bg="white"
          border={2}
          borderColor="greys.alto"
          className="emotion-3 emotion-0"
          color="greys.charcoal"
          fontSize="base"
          lineHeight="normal"
          mb={3}
          px={4}
          py={3}
          textAlign="left"
          type="password"
        >
          <input
            className="emotion-0 emotion-1 emotion-2"
            type="password"
          />
        </PasswordInput__Input>
        <PasswordInput__Toggle
          as="button"
          onClick={[Function]}
          type="button"
        >
          <button
            className="emotion-12 emotion-13"
            onClick={[Function]}
            type="button"
          >
            <Icon
              mr={2}
              name="visibility"
              size={22}
              title={null}
            >
              <Base
                className="emotion-8 emotion-5"
                mr={2}
                name="visibility"
                size={22}
                title={null}
              >
                <StyledSvg
                  className="emotion-8 emotion-5"
                  fill="currentcolor"
                  height={22}
                  mr={2}
                  title="visibility"
                  viewBox="0 0 24 24"
                  width={22}
                >
                  <svg
                    className="emotion-5 emotion-6 emotion-7"
                    fill="currentcolor"
                    height={22}
                    title="visibility"
                    viewBox="0 0 24 24"
                    width={22}
                  >
                    <path
                      d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                    />
                  </svg>
                </StyledSvg>
              </Base>
            </Icon>
            Show
          </button>
        </PasswordInput__Toggle>
      </div>
    </Wrapper>
  </Base>
</PasswordInput>
`;

exports[`<PasswordInput /> when visibility is toggled renders correctly 1`] = `
.emotion-3 {
  padding-right: 5.625rem;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color 200ms ease-in;
  transition: border-color 200ms ease-in;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-3:focus {
  border-color: #8DE2E0;
}

.emotion-3:disabled {
  opacity: 0.7;
  cursor: not-allowed;
}

.emotion-3::-webkit-input-placeholder {
  color: #666666;
}

.emotion-3::-moz-placeholder {
  color: #666666;
}

.emotion-3:-ms-input-placeholder {
  color: #666666;
}

.emotion-3::placeholder {
  color: #666666;
}

.emotion-3::-ms-clear {
  display: none;
}

.emotion-14 {
  position: relative;
}

.emotion-1 {
  margin-bottom: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 32px;
  padding-right: 32px;
  color: greys.charcoal;
  background-color: white;
  font-size: base;
  line-height: normal;
  border: 2px;
  border-color: greys.alto;
  text-align: left;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color;
  transition: border-color;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-right: 5.625rem;
  display: block;
  width: 100%;
  outline: 0;
  -webkit-transition: border-color 200ms ease-in;
  transition: border-color 200ms ease-in;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-1:disabled {
  cursor: not-allowed;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-1:focus {
  border-color: #8DE2E0;
}

.emotion-1:disabled {
  opacity: 0.7;
  cursor: not-allowed;
}

.emotion-1::-webkit-input-placeholder {
  color: #666666;
}

.emotion-1::-moz-placeholder {
  color: #666666;
}

.emotion-1:-ms-input-placeholder {
  color: #666666;
}

.emotion-1::placeholder {
  color: #666666;
}

.emotion-1::-ms-clear {
  display: none;
}

.emotion-12 {
  border: none;
  margin: 0;
  padding: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  line-height: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  position: absolute;
  height: 100%;
  top: 0;
  left: calc(100% - 5rem);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-12:focus {
  outline: none;
}

.emotion-8 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
}

.emotion-6 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
}

<PasswordInput
  pr="5.625rem"
>
  <Base
    className="emotion-3 emotion-0"
  >
    <Wrapper>
      <div
        className="emotion-14 emotion-15"
      >
        <PasswordInput__Input
          bg="white"
          border={2}
          borderColor="greys.alto"
          className="emotion-3 emotion-0"
          color="greys.charcoal"
          fontSize="base"
          lineHeight="normal"
          mb={3}
          px={4}
          py={3}
          textAlign="left"
          type="text"
        >
          <input
            className="emotion-0 emotion-1 emotion-2"
            type="text"
          />
        </PasswordInput__Input>
        <PasswordInput__Toggle
          as="button"
          onClick={[Function]}
          type="button"
        >
          <button
            className="emotion-12 emotion-13"
            onClick={[Function]}
            type="button"
          >
            <Icon
              mr={2}
              name="visibilityOff"
              size={22}
              title={null}
            >
              <Base
                className="emotion-8 emotion-5"
                mr={2}
                name="visibilityOff"
                size={22}
                title={null}
              >
                <StyledSvg
                  className="emotion-8 emotion-5"
                  fill="currentcolor"
                  height={22}
                  mr={2}
                  title="visibilityOff"
                  viewBox="0 0 24 24"
                  width={22}
                >
                  <svg
                    className="emotion-5 emotion-6 emotion-7"
                    fill="currentcolor"
                    height={22}
                    title="visibilityOff"
                    viewBox="0 0 24 24"
                    width={22}
                  >
                    <path
                      d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46A11.804 11.804 0 0 0 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
                    />
                  </svg>
                </StyledSvg>
              </Base>
            </Icon>
            Hide
          </button>
        </PasswordInput__Toggle>
      </div>
    </Wrapper>
  </Base>
</PasswordInput>
`;
